# UmaPyogin

./: .clang-format  CMakeLists.txt  Readme.md  conanfile.py
src/UmaPyogin/: Config.h  Hook.cpp  Hook.h  Il2Cpp.cpp  Il2Cpp.h  Localization.cpp  Localization.h  Log.cpp  Log.h  Misc.cpp  Misc.h  Plugin.cpp  Plugin.h
